--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,1 +1,11 @@
-<h1>Welcome to my App</h1>
+<%= @places.inspect %>
+
+<div>
+	<h1><%= place.name %></h1>
+	<i><%= place.address %></i>
+	<p><%= place.description %></p>
+</div>
+
+<hr>
+
+<% end %>
