--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,4 @@
-<%= @places.inspect %>
+<%= @places.each do |place| %>
 
 <div>
 	<h1><%= place.name %></h1>
@@ -6,6 +6,6 @@
 	<p><%= place.description %></p>
 </div>
 
-<hr>
+<hr />
 
 <% end %>
