--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,4 @@
-<%= @places.each do |place| %>
+<% @places.each do |place| %>
 
 <div>
 	<h1><%= place.name %></h1>
@@ -7,5 +7,4 @@
 </div>
 
 <hr />
-
 <% end %>
