--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -18,8 +18,15 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar.navbar-inverse {
 	background: url('/assets/footer_lodyas.png');
-	border-radius: 0;
+	border-radius: 0px;
 	box-shadow: 0px 1px 3px #2a2a2a;
+}
+
+.navbar-inverse .navbar-brand {
+	color: #E3E85A;
+	font-family: "Helvetica Neue", Helvetica, sans-serif;
+  	font-weight: 600;
+  	letter-spacing: -0.3px;
 }
 
  body {
