--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,13 +1,17 @@
 <div class="col-xs-11 ">
 
-<% @places.each do |place| %>
+	<% @places.each do |place| %>
 
-<div class="booyah-box col-xs-10 col-xs-offset-1">
-	<h1><%= place.name %></h1>
-	<i><%= place.address %></i><br /><br />
-	<p><%= place.description %></p><br />
+	<div class="booyah-box col-xs-10 col-xs-offset-1">
+		<h1><%= place.name %></h1>
+		<i><%= place.address %></i><br /><br />
+		<p><%= place.description %></p><br />
+	</div>
+
+	<% end %>
+
 </div>
 
-<% end %>
-
+<div class="apple_pagination col-xs-9 col-xs-offset-1">
+		<%= will_paginate @posts %>
 </div>
