Added create functionality

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -34,6 +34,11 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.glyphicon {
+
+  color:white;
+}
+
 .apple_pagination {
   clear:both;
   background: #f1f1f1;
