--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,4 +1,8 @@
-
+#map-canvas {
+        height: 300px;
+        margin: 0px;
+        padding: 0px;
+}
 .field_with_errors {
   color: #ff3333;
   background-color: #FFEEEE;
