--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -40,18 +40,47 @@
 </div>
 
 <div class="clear"></div>
-<%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
-  <%= f.input :message %>
-  <%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>
-  <%= f.submit "Add a Comment", :class => 'btn btn-primary' %>
-<% end %>
 
-<h1>Comments</h1>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="model-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times</button>
+        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
+      </div>
+      <div class="modal-body">
+        <div class="clear"></div>
+        <%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
+          <%= f.input :message %>
+          <%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>
+         
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+         <%= f.submit "Add a Comment", :class => 'btn btn-primary' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="col-xs-10 col-xs-offset-1">
+
+<h1 class="pull-left">Comments</h1>
+
+<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">Add a comment
+</button>
+
+</div>
+
+
+<div class="clear"></div>
+
 <% @place.comments.each do |comment| %>
-  <div>
+  <div class="col-xs-12 col-sm-6">
     <blockquote>
       <% if comment.humanized_rating.present? %>
-        <b><%= comment.rating %></b>
+        <b><%= comment.humanized_rating %></b>
       <% end %>  
       <%= comment.message %>
       <small><%= comment.user.email %></small>
