--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,7 +1,6 @@
 <div class="col-xs-11 ">
 
 	<% @places.each do |place| %>
-
 	<div class="booyah-box col-xs-10 col-xs-offset-1">
 		<h1><%= link_to place.name, place_path(place) %></h1>
 		<i><%= place.address %></i><br /><br />
@@ -12,10 +11,20 @@
 	<% end %>
 	</div>
 
-	<% end %>
-
+	<% if place.comments.present? %>
+		<div class="col-xs-12">
+	    <blockquote>
+	      <% if place.comments.last.humanized_rating.present? %>
+	        <b><%= place.comments.last.humanized_rating %></b>
+	      <% end %>  
+	      <%= place.comments.last.message %>
+	      <small><%= place.comments.last.user.email %></small>
+	    </blockquote>
+	    </div>
+    <% end %>
+    <% end %>
 </div>
 
 <div class="apple_pagination col-xs-9 col-xs-offset-1">
-		<%= will_paginate @posts %>
+	<%= will_paginate @posts %>
 </div>
