Added photo uploading capabilities

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -4,8 +4,9 @@
 
 #map-canvas {
         height: 300px;
-        margin: 0px;
-        padding: 0px;
+        margin: 15px 0;
+        padding: 10px;
+        border: 1px solid #ccc;
 }
 .field_with_errors {
   color: #ff3333;
