--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,13 +6,19 @@
 		<i><%= place.address %></i><br /><br />
 		<p><%= place.description %></p><br />
 
+	<div class="col-xs-12">
+    <% if place.photos.last.present? %> 
+    <%= image_tag place.photos.last.picture, :class => 'img-responsive' %>
+    <% end %>
+	</div>
+	
 	<% if place.user.present? %>
 	  <small><%= place.user.email %></small>
 	<% end %>
 	</div>
 
 	<% if place.comments.present? %>
-		<div class="col-xs-12">
+		<div class="col-xs-10 col-xs-offset-1">
 	    <blockquote>
 	      <% if place.comments.last.humanized_rating.present? %>
 	        <b><%= place.comments.last.humanized_rating %></b>
