--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,4 +1,5 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
+
 <h1><%= @place.name %></h1>
 <i><%= @place.address %></i>
 <br /><br />
@@ -6,17 +7,13 @@
 
 <br />
 
-<% @place.photos.each do |photo| %>
-<%= photo.caption %>
-<% end %>
-
 <% if @place.latitude.present? && @place.longitude.present? %>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
   <script>
     function initialize() {
       var myLatlng = new google.maps.LatLng(<%= @place.latitude %>,<%= @place.longitude %>);
       var mapOptions = {
-        zoom: 12,
+        zoom: 14,
         center: myLatlng
       };
       var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
@@ -32,14 +29,39 @@
 
   </script>
 
-  <div id="map-canvas"></div>
+  <div id="map-canvas" class="col-xs-12 "></div>
   <% end %>
   <br />
-  
+  <div class="col-xs-5">
+  <% @place.photos.each do |photo| %>
+    <%= image_tag photo.picture, :class => 'img-responsive center-block'%>
+    <br />
+    <h4 class="pull-left"><%= photo.caption %></h4>
+  <% end %>
+  </div>
+  <div class="clear"></div>
   <div class="pull-right">
+    <!-- Small modal for upload photos -->
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Upload photo</button>
+
+  <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-body">
+        <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+          <%= f.input :picture, :label => 'Choose a photo'%><br />
+          <%= f.input :caption, :label => 'Write a caption' %><br />
+          <%= f.submit "Upload photo", :class => 'btn btn-primary' %>
+        <% end %>    
+        </div>
+      </div>
+    </div>
+  </div>
+
   	<% if current_user && current_user == @place.user %>
   	<%= link_to 'Edit', edit_place_path(@place), :class => 'btn btn-primary'%>
-  	<%= link_to 'Destroy', place_path(@place), :method => :delete, :data => {:confirm => 'Are you sure you want to delete this?'}, :class => 'btn btn-danger' %>
+  	<%= link_to 'Delete', place_path(@place), :method => :delete, :data => {:confirm => 'Are you sure you want to delete this?'}, :class => 'btn btn-danger' %>
+    
   	<% end %>
   	
   </div>
@@ -48,8 +70,8 @@
 
 <div class="clear"></div>
 
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="model-dialog">
+<div class="modal fade in" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="model-dialog col-xs-12">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times</button>
@@ -72,14 +94,11 @@
 </div>
 
 <div class="col-xs-10 col-xs-offset-1">
-
 <h1 class="pull-left">Comments</h1>
-
 <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">Add a comment
 </button>
 
 </div>
-
 
 <div class="clear"></div>
 
@@ -95,14 +114,9 @@
   </div>
 <% end %>
 
-<div class="clear"></div>
-
-<%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
-  <%= f.input :caption %>
-  <%= f.submit "Upload photo", :class => 'btn btn-primary' %>
-<% end %>
 
 
+    
 
 
 
