Added email template

--- a/app/views/notification_mailer/comment_added.html.erb
+++ b/app/views/notification_mailer/comment_added.html.erb
@@ -1,4 +1,9 @@
-<p>A comment has been added on Nomster!</p>
+<p>Hey there!</p>
+
+<p><b>A comment has been added on Nomster!</b>
+
+You can view it <%= link_to 'here', place_url(@place) %>.
+</p>
 
 Boing,<br />
 Vincent
