--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,5 +1,45 @@
 <div class="col-xs-11 ">
 
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <%= image_tag 'slider1.jpg'%>
+      <div class="carousel-caption">
+        Find the best Bay Ridge restaurants
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'slider2.jpg'%>
+      <div class="carousel-caption">
+        Find the best bars
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'slider3.jpg'%>
+      <div class="carousel-caption">
+        Highest rated on Zagat
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
 	<% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1">
 		<h1><%= link_to place.name, place_path(place) %></h1>
@@ -11,7 +51,7 @@
     <%= image_tag place.photos.last.picture, :class => 'img-responsive' %>
     <% end %>
 	</div>
-	
+
 	<% if place.user.present? %>
 	  <small><%= place.user.email %></small>
 	<% end %>
