--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-11 ">
+<div class="col-xs-12">
 
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -11,19 +11,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <%= image_tag 'slider1.jpg'%>
+      <%= image_tag 'slider1.jpg', :class => 'img-responsive center-block'%>
       <div class="carousel-caption">
         Find the best Bay Ridge restaurants
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider2.jpg'%>
+      <%= image_tag 'slider2.jpg', :class => 'img-responsive center-block'%>
       <div class="carousel-caption">
         Find the best bars
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider3.jpg'%>
+      <%= image_tag 'slider3.jpg', :class => 'img-responsive center-block'%>
       <div class="carousel-caption">
         Highest rated on Zagat
       </div>
@@ -71,6 +71,6 @@
     <% end %>
 </div>
 
-<div class="apple_pagination col-xs-9 col-xs-offset-1">
+<div class="apple_pagination col-xs-10 col-xs-offset-1">
 	<%= will_paginate @posts %>
 </div>
