--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,24 @@
+.carousel {
+  box-shadow: 0 3px 8px #2a2a2a;
+  background: black;
+}
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+  height:650px;
+  width:auto;
+}
+
+.carousel-caption {
+  font-family: 'Helvetica-Neue', Helvetica, sans-serif;
+  font-size: 48px;
+  font-weight: 100;
+  text-shadow: rgba(0,0,0,0.95) 2px 2px;
+  background-color: rgba(0,0,0,0.5);
+  width: 100%;
+  position: absolute;
+  left: 0;
+}
+
 .clear {
   clear:both;
 }
@@ -54,6 +75,7 @@ h1, h2, h3, h4, h5, h6 {
 	background: url('/assets/footer_lodyas.png');
 	border-radius: 0px;
 	box-shadow: 0px 1px 3px #2a2a2a;
+  margin-bottom: 0px;
 }
 
 .navbar-inverse .navbar-brand {
