--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
-<div class="booyah-box col-xs-11 col-xs-offset-1">
-  <h1>User Dashboard</h1>
+<div class="booyah-box col-xs-10 col-xs-offset-1">
+  <h1><%= @user.email %></h1>
+  <h3>Member Since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
+  <h4><%= @user.comments.count %> total comments</h4>
+  <h4><%= @user.comments.where(:rating => '5_stars').count %> total 5 reviews</h4>
 </div>
