--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,15 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1><%= @user.email %></h1>
-  <h3>Member Since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
-  <h4><%= @user.comments.count %> total comments</h4>
-  <h4><%= @user.comments.where(:rating => '5_stars').count %> total 5 reviews</h4>
+	
+	<div class="col-xs-4">
+		<%= image_tag 'user.png' %>
+	</div>
+	
+	<div class="col-xs-8">
+		<h1><%= @user.email %></h1>
+  		<h3>Member Since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
+  		<h4><%= @user.comments.count %> total comments</h4>
+  		<h4><%= @user.comments.where(:rating => '5_stars').count %> total 5 reviews</h4>
+  	</div>
+
+  	<div class="clear"></div
 </div>
