--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,22 @@
   		<h4><%= @user.comments.count %> total comments</h4>
   		<h4><%= @user.comments.where(:rating => '5_stars').count %> total 5 reviews</h4>
   	</div>
-
-  	<div class="clear"></div
 </div>
+
+<div class="clear"></div>
+<br /><br />
+<h1 class="text-center">My Comments</h1>
+<br /><br />
+  <% @user.comments.each do |comment| %>
+  <div class="col-xs-12 col-sm-6">
+  	<h2 class="text-center"><%= link_to comment.place.name, place_path(comment.place)%></h2>
+    <blockquote>
+      <% if comment.humanized_rating.present? %>
+        <b><%= comment.humanized_rating %></b> -
+      <% end %>
+      <%= comment.message %>
+      <small><%= comment.user.email %></small>
+    </blockquote>
+  </div>
+  <% end %>
+
